Bug 46623 - UI: Edit page break don't work if the cursor is in the header
Summary: UI: Edit page break don't work if the cursor is in the header
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: BSA target:26.2.0
Keywords:
Depends on:
Blocks: Writer-Page-Break
  Show dependency treegraph
 
Reported: 2012-02-25 11:53 UTC by mini-matze
Modified: 2025-09-11 21:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
PDF with pictures of the situation (82.48 KB, application/pdf)
2012-02-25 11:57 UTC, mini-matze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mini-matze 2012-02-25 11:53:00 UTC
Problem description: 
With Libreoffice 3.5 there are a blue line between the pages that have manuell page break.
If the mouse is over the line you could select to edit the page break.
This does not work if the curser is in the header!

Steps to reproduce:
1. Create header
2. make an manuell pagebreak
3. Set the curser in header
4. Go with the mouse over the line and select to edit the page break.
5. You CAN'T edit, wrong paragraph is used!

6. If you select the mainbody of the page and repeat by 4. the edit work! 

Current behavior:

Expected behavior:

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 5.1; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Comment 1 mini-matze 2012-02-25 11:57:14 UTC
Created attachment 57638 [details]
PDF with pictures of the situation
Comment 2 Jean-Baptiste Faure 2012-03-01 13:58:54 UTC
Indeed something is wrong. Reproduced under Ubuntu 11.10 with LO 3.5.0 and LO 3.5.2 rc0+ (LibreOffice 3.5.2rc0+ Version ID : 369aea7-720bbeb-73cb0b8-f269e46-0843e11)

Cédric: please could you have a look ? Please feel free to reassign if you can't handle this.

Best regards. JBF
Comment 3 QA Administrators 2015-04-19 03:20:18 UTC Comment hidden (obsolete)
Comment 4 Gordo 2015-04-22 13:19:35 UTC
Still not right.

Set up:
1. New Text Document.
2. Type “test1” and Enter.
3. Type “test2” and Enter.
4. Type “test3” and Enter.
5. Insert Header, Default Style, and type “Test Header”.
6. Place cursor in “test2” and insert page break before.
Result:
You should now have “test1” on page 1 and “test2” and “test3” on page 2.

Cursor in header:
1. Place cursor in header.
2. Hover mouse over page break and click Edit Page Break.
3. In Text Flow tab, change break Type from Page to Column.
4. Click on the With page style checkbox to clear blue box.
5. Check With page style checkbox; Default Style appears in Type.
Result:
Right click on paragraph with page break, Paragraph → Text Flow, now has page style.  If the page style is changed to First Page, then page 2 now has First Page style instead of page 1.


Cursor in any paragraph except the one with the page break:
1. Place cursor in paragraph “test2”.
2. Hover mouse of page break and click Edit Page Break.
3. In Text Flow tab, check Insert checkbox.
4. Check With page style checkbox; Default Style appears in Type.
5. Change style to First Page.
Result:
Page 2 now has First Page style.  The same result happens if you change the paragraph properties in the paragraph with the page break.  If you change the paragraph properties on any paragraph but the one with page break (“test3”) and modify it to insert a page break before with First Page style, then the new page will have the First Page style and not the one before it.

Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Comment 5 Gordo 2015-06-02 23:28:05 UTC
Please ignore comment 4.  I must have been in a different state of mind at the time.

Original steps still reproducible.

The page break can be altered, in a roundabout way, with the cursor in the header:
1. New Text Document.
2. Insert → Header.
3. Place cursor in body and Insert → Manual Break and OK default.
Note:
There are now two pages with Default Style.
4. Place cursor in header and hover mouse over page break to get purple popover and select Edit Page Break.
5. Change to Text Flow tab (due to other bug that opens to Indents & Spacing), change Break Type from Page to Column.
6. Click on the With page style checkbox to clear blue box and then check With page style checkbox; Default Style appears.
7. Change from Default Style to First Page and OK.
Result:
Second page has been changed successfully to First Page style.

The page break can be altered with the cursor in a paragraph other than the first:
8. On the second page, enter some empty paragraphs.
9. Place cursor on the second page in any paragraph except the first and hover mouse over page break to get purple popover and select Edit Page Break.
10. Change to Text Flow tab and check Insert checkbox.
11. Check With page style checkbox and change from Default Style to First Page and OK.
Result:
Second page has been changed successfully to Default Style style.

Windows Vista 64
Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd1

Version: 5.1.0.0.alpha1+
Build ID: cba920edf88bef06a6689e7847c5789dd3ee67b7
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-01_04:22:29
Comment 6 QA Administrators 2016-09-20 09:46:12 UTC Comment hidden (obsolete)
Comment 7 Jean-Baptiste Faure 2016-09-24 20:24:39 UTC
Nothing changed. Tested in LO 5.2.3.0+

Best regards. JBF
Comment 8 Thomas Lendo 2017-06-21 22:31:12 UTC
Reproducible with Version: 6.0.0.0.alpha0+
Build ID: 6ef59d7ace7e4db52caea601a384ed016365bcaf
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-06-20_01:21:33
Locale: de-DE (de_DE.UTF-8); Calc: group
Comment 9 QA Administrators 2018-06-22 02:49:37 UTC Comment hidden (obsolete)
Comment 10 Jean-Baptiste Faure 2018-06-23 16:04:47 UTC
Nothing changed. Tested in LO 6.2.0.0.alpha0+

Best regards. JBF
Comment 11 QA Administrators 2021-04-04 04:00:47 UTC Comment hidden (obsolete)
Comment 12 Telesto 2022-11-14 14:57:17 UTC
Still around
Comment 13 Rod Galea 2024-08-29 10:23:16 UTC
When opening a new document the blank page doesn't show a curser.
Comment 14 Jean-Baptiste Faure 2024-09-01 16:12:23 UTC
(In reply to Rod Galea from comment #13)
> When opening a new document the blank page doesn't show a curser.

Sorry, off topic. That said I do not reproduce that with LibreOffice 24.8. Please open a new bug report if you have the problem with an up-to-date version.

Best regards. JBF
Comment 15 Justin L 2025-09-11 18:20:27 UTC
repro 26.2+

This is very interesting because SwTextShell::Execute SID_PARA_DLG with the same SwPaM in both cases.

Ahh, SvxExtParagraphTabPage::DisablePageBreak because cursor's
sw/inc/fesh.hxx:enum class FrameTypeFlags != BODY
so SwParaDlg::PageCreated textflow sets 
SID_DISABLE_SVXEXTPARAGRAPHTABPAGE_PAGEBREAK
Comment 16 Commit Notification 2025-09-11 20:56:28 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca08171eb6dc6dda373c9f7c3f6abeba8c1db28f

tdf#46623 sw PageBreakWin: always move cursor to FindFirstBodyContent

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.